[package]
name = "MoodleDownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.9"}
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
bytes = "1.1.0"