[package]
name = "MoodleDownloader"
version = "0.2.0"
edition = "2021"
description = "A simple tool to download a list of files from a moodle course"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.23"}
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
bytes = "1.5.0"
clap = { version = "4.4.16", features = ["derive"] }
anyhow = "1.0.79"